[tool.poetry]
name = "ai-bot"
version = "0.1.0"
description = ""
authors = ["DOBRO-228 <matematikaigor@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
wemake-python-styleguide = "^0.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
